# terraform-binary

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  terraform.py
terraform/: terraform.py
