[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "terraform"
author = "Paris Kasidiaris"
author-email = "paris@sourcelair.com"
home-page = "https://github.com/sourcelair/terraform-binary"
classifiers = ["License :: OSI Approved :: MIT License"]
dist-name = "terraform-binary"
requires-python = ">=3.6"
